Fixed Header Spacing Issue on Listing Page
I adjusted the margins of the div between the header and content.

--- a/output.css
+++ b/output.css
@@ -1101,6 +1101,18 @@ select {
   height: 100%;
 }
 
+.h-\[38px\] {
+  height: 38px;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -1155,10 +1167,6 @@ select {
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-auto {
-  width: auto;
 }
 
 .w-full {
@@ -2191,6 +2199,10 @@ select {
     height: 50px;
   }
 
+  .md\:h-\[100px\] {
+    height: 100px;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -2201,10 +2213,6 @@ select {
 
   .md\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .md\:w-auto {
-    width: auto;
   }
 
   .md\:grid-cols-3 {
